--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/ctevnan/socketchat-apptest#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "mongoose": "^4.4.12",
+    "morgan": "^1.7.0",
     "socket.io": "^1.4.5"
   }
 }
